--- a/plugin.xml
+++ b/plugin.xml
@@ -10,7 +10,7 @@
                 <param name="ios-package" value="HyperTrackWrapper" />
             </feature>
         </config-file>
-        <framework src="HTTransmitter" type="podspec" spec="~> 0.12.6" />
+        <framework src="src/ios/SampleFrameworkTesting.framework" custom="true"/>
         <source-file src="src/ios/HyperTrackWrapper.m" />
     </platform>
 </plugin>
